# rust-contract-tutorial

./: .gitignore  package.json  truffle-config.js
contracts/my_counter/: Cargo.toml
contracts/my_counter/src/: lib.rs
migrations/: 2_contract_migration.js
test/: test-counter.js
